[gd_scene load_steps=2 format=3 uid="uid://moieoeq8vice"]

[ext_resource type="Script" uid="uid://dbgqbcbuug2du" path="res://Code/MainBoard.gd" id="1_nnx1j"]

[node name="MainBoard" type="Panel"]
custom_minimum_size = Vector2(340, 240)
offset_right = 330.0
offset_bottom = 220.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nnx1j")

[node name="NAME" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
theme_type_variation = &"Title"
text = "ÈªëËöÇËöÅÁâå‰∏ªÊùøüêú"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PickGPUCount" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 34.0
offset_right = 224.0
offset_bottom = 57.0
size_flags_horizontal = 4
theme_type_variation = &"Title"
text = "Â∑≤Ë£ÖËΩΩGPU: 0/0"
metadata/_edit_use_anchors_ = true

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -173.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MC"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MC/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MC/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MC/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PowerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Power: OFF"

[connection signal="pressed" from="PowerButton" to="." method="WhenPowerButtonClicked"]
